{
    "version": 1,
    "name": "GameControls",
    "maps": [
        {
            "name": "Battle",
            "id": "3c84c5b6-e4d2-4884-a3f5-9eaacd9f71fe",
            "actions": [
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "4b7ce3e0-a667-4cf5-803e-43c624fd8c14",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "f3a5ef15-3b2a-40bc-a87a-0efc8ee6489d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Inspect_Secondary",
                    "type": "Button",
                    "id": "0c53ba14-4453-4c77-a165-dc88e3c3fd2b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NavLeft",
                    "type": "Button",
                    "id": "f7704c67-e2ed-439e-b70d-5cbeafe2e464",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NavRight",
                    "type": "Button",
                    "id": "a9471459-e5f2-4e56-9a87-9a45c033f4bc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NavUp",
                    "type": "Button",
                    "id": "6eb848cf-5afc-4f68-b72a-c4dfb59c1093",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NavDown",
                    "type": "Button",
                    "id": "de8fdbe0-6355-4329-a128-b9b23984cf20",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "30f13e19-0d08-4751-8842-3e9c8a00ad20",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f277f19-5ab8-4de8-91a6-fe18c417606f",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0e721ac-39fe-4949-962f-f4c357e27fff",
                    "path": "<Keyboard>/numpadEnter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1791a96-85f9-4896-a03c-1288b027d592",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "161bb605-b5a6-4487-baf7-995d1abcf386",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inspect_Secondary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f4911444-6913-404f-b0b0-b79f1185c22b",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NavLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9d8bb92-0eb2-4bb4-9950-c18c51a8791c",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NavRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfffb4d8-d7ad-4408-aee0-c7ba567ef9dd",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NavUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "636587d1-ca1b-45f5-a760-cc39e4ab6e80",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NavDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "45d38add-22b3-4a72-8836-e61d96550098",
            "actions": [
                {
                    "name": "UINavigation",
                    "type": "Value",
                    "id": "b264b214-7c73-4104-acfd-5066a3528391",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "f387fd7b-285a-4ff8-945f-65f0229766af",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UINavigation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "478877a2-9b31-45ee-b0f6-b9ef45705eab",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UINavigation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "08e3f1c5-3b43-43c9-9324-aebbbbe84722",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UINavigation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "19e3624e-b182-4fe2-89d1-21cf6d77b673",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UINavigation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e0206b63-c1d6-4c56-aef6-b112fe8f2ad6",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UINavigation",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}